Add JBR25 build scripts for Mac aarch64 and x64
Test run: https://android-build.corp.google.com/builds/abtd/run/L34100030100521428

Bug: 469841005
Change-Id: I733a3fe4bde957af95a2e97da2892e8a1812fd9d